more cmake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,9 @@
 cmake_minimum_required (VERSION 3.8)
 
 project ("BulkBulkan")
-include_directories (${PROJECT_SOURCE_DIR})
-include_directories(Libs)
+include_directories (${PROJECT_SOURCE_DIR} Libs)
 
-file(GLOB_RECURSE _source_list ${PROJECT_NAME}.cpp* ${PROJECT_NAME}.h* ${PROJECT_NAME}.hpp* )
+file(GLOB_RECURSE _source_list ${PROJECT_NAME}/*.cpp ${PROJECT_NAME}/*.h ${PROJECT_NAME}/*.hpp  )
 foreach(_source IN ITEMS ${_source_list})
 	get_filename_component(_source_path "${_source}" PATH)
 	string(REPLACE "${CMAKE_SOURCE_DIR}" "" _group_path "${_source_path}")
@@ -23,7 +22,6 @@ add_subdirectory(Libs/glm)
 add_executable (${PROJECT_NAME} ${_source_list})
 
 target_link_libraries(${PROJECT_NAME} glfw Vulkan::Vulkan)
-
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
 	set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
