--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,6 @@ if (CMAKE_VERSION VERSION_GREATER 3.12)
 endif()
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
